add focus management on close

--- a/more-complex-component/index.html
+++ b/more-complex-component/index.html
@@ -43,7 +43,7 @@
 
     confirmButton.addEventListener('click', event => {
       // ucModal.setAttribute('opened', '');
-      ucModal.open();
+      ucModal.open(event);
     });
   </script>
 </body>
